<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="10dp"
    tools:context="com.example.cesarmendes.mediasapp.Fragments.HomeFragment">

    <ImageView
        android:layout_width="200dip"
        android:layout_height="100dip"
        android:background="@drawable/ciencias_logo_azul_01"/>


    <Button
        android:id="@+id/mediasButton"
        android:layout_height="wrap_content"
        style="@style/MainButtons"
        android:text="@string/obter_resultados"/>

    <Button
        android:id="@+id/cadeirasButton"
        android:layout_height="wrap_content"
        style="@style/MainButtons"
        android:text="@string/listar_cadeiras"/>

    <Button
        android:id="@+id/editarButton"
        android:layout_height="wrap_content"
        style="@style/MainButtons"
        android:text="@string/editar_cadeiras"/>
</LinearLayout>
</ScrollView>