<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context="com.example.cesarmendes.mediasapp.Fragments.CadeiraFragment">

        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            style="@style/MuchStylerino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_input"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/nome_cadeira"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            style="@style/MuchStylerino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credits_input"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/creditos_cadeira"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            style="@style/MuchStylerino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anos_input"
                android:textSize="20dp" />

            <Spinner
                android:id="@+id/spinner_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"></Spinner>

        </LinearLayout>

        <LinearLayout
            style="@style/MuchStylerino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value_input"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/valores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">


            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                style="@style/MainButtons"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>